[tool.poetry]
name = "python-pinterest"
version = "0.1.0"
description = "A simple Python wrapper for Pinterest REST API (Beta) (5.x) ✨ 🍰 ✨"
authors = ["ikaroskun <merle.liukun@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/sns-sdks/python-pinterest"
repository = "https://github.com/sns-sdks/python-pinterest"
keywords = ["pinterest", "pinterest sdk", "pinterest api v5"]

# https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# build
packages = [
    { include = "pinterest"},
]

[tool.poetry.dependencies]
python = "^3.6.2"
httpx = "0.22.0"
Authlib = "^0.15.5"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
bump2version = "^1.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
